lab1/lab1/Calculator/obj/Release/net8.0/CellCraftCalculatorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\Learning\University2\OOP\oop repo\lab1\lab1\Calculator\CellCraftCalculator.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Calculator {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class CellCraftCalculatorParser : Parser {
	public const int
		IDENTIFIER=1, NUMBER=2, INTEGER=3, OP_ADD=4, OP_SUBTRACT=5, OP_MULTIPLY=6, 
		OP_DIVIDE=7, OP_EXPONENT=8, OP_INC=9, OP_DEC=10, OP_EQUAL=11, OP_LESS=12, 
		OP_GREATER=13, OP_LESS_EQUAL=14, OP_GREATER_EQUAL=15, OP_NOT_EQUAL=16, 
		LPAREN=17, RPAREN=18, WS=19;
	public const int
		RULE_compileUnit = 0, RULE_expression = 1, RULE_operand = 2;
	public static readonly string[] ruleNames = {
		"compileUnit", "expression", "operand"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'^'", "'++'", "'--'", 
		"'=='", "'<'", "'>'", "'<='", "'>='", "'<>'", "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "IDENTIFIER", "NUMBER", "INTEGER", "OP_ADD", "OP_SUBTRACT", "OP_MULTIPLY", 
		"OP_DIVIDE", "OP_EXPONENT", "OP_INC", "OP_DEC", "OP_EQUAL", "OP_LESS", 
		"OP_GREATER", "OP_LESS_EQUAL", "OP_GREATER_EQUAL", "OP_NOT_EQUAL", "LPAREN", 
		"RPAREN", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CellCraftCalculator.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public CellCraftCalculatorParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(CellCraftCalculatorParser.Eof, 0); }
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICellCraftCalculatorVisitor<TResult> typedVisitor = visitor as ICellCraftCalculatorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 6; expression();
			State = 7; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class CompareExprContext : ExpressionContext {
		public IToken operatorToken;
		public OperandContext[] operand() {
			return GetRuleContexts<OperandContext>();
		}
		public OperandContext operand(int i) {
			return GetRuleContext<OperandContext>(i);
		}
		public ITerminalNode OP_EQUAL() { return GetToken(CellCraftCalculatorParser.OP_EQUAL, 0); }
		public ITerminalNode OP_LESS() { return GetToken(CellCraftCalculatorParser.OP_LESS, 0); }
		public ITerminalNode OP_GREATER() { return GetToken(CellCraftCalculatorParser.OP_GREATER, 0); }
		public ITerminalNode OP_LESS_EQUAL() { return GetToken(CellCraftCalculatorParser.OP_LESS_EQUAL, 0); }
		public ITerminalNode OP_GREATER_EQUAL() { return GetToken(CellCraftCalculatorParser.OP_GREATER_EQUAL, 0); }
		public ITerminalNode OP_NOT_EQUAL() { return GetToken(CellCraftCalculatorParser.OP_NOT_EQUAL, 0); }
		public CompareExprContext(ExpressionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.EnterCompareExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.ExitCompareExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICellCraftCalculatorVisitor<TResult> typedVisitor = visitor as ICellCraftCalculatorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompareExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_expression);
		int _la;
		try {
			_localctx = new CompareExprContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 9; operand(0);
			State = 10;
			((CompareExprContext)_localctx).operatorToken = _input.Lt(1);
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OP_EQUAL) | (1L << OP_LESS) | (1L << OP_GREATER) | (1L << OP_LESS_EQUAL) | (1L << OP_GREATER_EQUAL) | (1L << OP_NOT_EQUAL))) != 0)) ) {
				((CompareExprContext)_localctx).operatorToken = _errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			State = 11; operand(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperandContext : ParserRuleContext {
		public OperandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operand; } }
	 
		public OperandContext() { }
		public virtual void CopyFrom(OperandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ExponentialOperandContext : OperandContext {
		public OperandContext[] operand() {
			return GetRuleContexts<OperandContext>();
		}
		public OperandContext operand(int i) {
			return GetRuleContext<OperandContext>(i);
		}
		public ITerminalNode OP_EXPONENT() { return GetToken(CellCraftCalculatorParser.OP_EXPONENT, 0); }
		public ExponentialOperandContext(OperandContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.EnterExponentialOperand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.ExitExponentialOperand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICellCraftCalculatorVisitor<TResult> typedVisitor = visitor as ICellCraftCalculatorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExponentialOperand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MultiplicativeOperandContext : OperandContext {
		public IToken operatorToken;
		public OperandContext[] operand() {
			return GetRuleContexts<OperandContext>();
		}
		public OperandContext operand(int i) {
			return GetRuleContext<OperandContext>(i);
		}
		public ITerminalNode OP_MULTIPLY() { return GetToken(CellCraftCalculatorParser.OP_MULTIPLY, 0); }
		public ITerminalNode OP_DIVIDE() { return GetToken(CellCraftCalculatorParser.OP_DIVIDE, 0); }
		public MultiplicativeOperandContext(OperandContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.EnterMultiplicativeOperand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.ExitMultiplicativeOperand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICellCraftCalculatorVisitor<TResult> typedVisitor = visitor as ICellCraftCalculatorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultiplicativeOperand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IncrementOperandContext : OperandContext {
		public IToken operatorToken;
		public OperandContext operand() {
			return GetRuleContext<OperandContext>(0);
		}
		public ITerminalNode OP_INC() { return GetToken(CellCraftCalculatorParser.OP_INC, 0); }
		public ITerminalNode OP_DEC() { return GetToken(CellCraftCalculatorParser.OP_DEC, 0); }
		public IncrementOperandContext(OperandContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.EnterIncrementOperand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.ExitIncrementOperand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICellCraftCalculatorVisitor<TResult> typedVisitor = visitor as ICellCraftCalculatorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncrementOperand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AdditiveOperandContext : OperandContext {
		public IToken operatorToken;
		public OperandContext[] operand() {
			return GetRuleContexts<OperandContext>();
		}
		public OperandContext operand(int i) {
			return GetRuleContext<OperandContext>(i);
		}
		public ITerminalNode OP_ADD() { return GetToken(CellCraftCalculatorParser.OP_ADD, 0); }
		public ITerminalNode OP_SUBTRACT() { return GetToken(CellCraftCalculatorParser.OP_SUBTRACT, 0); }
		public AdditiveOperandContext(OperandContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.EnterAdditiveOperand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.ExitAdditiveOperand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICellCraftCalculatorVisitor<TResult> typedVisitor = visitor as ICellCraftCalculatorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAdditiveOperand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IdentifierOperandContext : OperandContext {
		public ITerminalNode IDENTIFIER() { return GetToken(CellCraftCalculatorParser.IDENTIFIER, 0); }
		public IdentifierOperandContext(OperandContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.EnterIdentifierOperand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.ExitIdentifierOperand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICellCraftCalculatorVisitor<TResult> typedVisitor = visitor as ICellCraftCalculatorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifierOperand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ParenthesizedOperandContext : OperandContext {
		public ITerminalNode LPAREN() { return GetToken(CellCraftCalculatorParser.LPAREN, 0); }
		public OperandContext operand() {
			return GetRuleContext<OperandContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(CellCraftCalculatorParser.RPAREN, 0); }
		public ParenthesizedOperandContext(OperandContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.EnterParenthesizedOperand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.ExitParenthesizedOperand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICellCraftCalculatorVisitor<TResult> typedVisitor = visitor as ICellCraftCalculatorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParenthesizedOperand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NumberOperandContext : OperandContext {
		public ITerminalNode NUMBER() { return GetToken(CellCraftCalculatorParser.NUMBER, 0); }
		public NumberOperandContext(OperandContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.EnterNumberOperand(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICellCraftCalculatorListener typedListener = listener as ICellCraftCalculatorListener;
			if (typedListener != null) typedListener.ExitNumberOperand(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICellCraftCalculatorVisitor<TResult> typedVisitor = visitor as ICellCraftCalculatorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumberOperand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperandContext operand() {
		return operand(0);
	}

	private OperandContext operand(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		OperandContext _localctx = new OperandContext(_ctx, _parentState);
		OperandContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_operand, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 20;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case LPAREN:
				{
				_localctx = new ParenthesizedOperandContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				State = 14; Match(LPAREN);
				State = 15; operand(0);
				State = 16; Match(RPAREN);
				}
				break;
			case NUMBER:
				{
				_localctx = new NumberOperandContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				State = 18; Match(NUMBER);
				}
				break;
			case IDENTIFIER:
				{
				_localctx = new IdentifierOperandContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				State = 19; Match(IDENTIFIER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.Lt(-1);
			State = 35;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 33;
					_errHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new AdditiveOperandContext(new OperandContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_operand);
						State = 22;
						if (!(Precpred(_ctx, 6))) throw new FailedPredicateException(this, "Precpred(_ctx, 6)");
						State = 23;
						((AdditiveOperandContext)_localctx).operatorToken = _input.Lt(1);
						_la = _input.La(1);
						if ( !(_la==OP_ADD || _la==OP_SUBTRACT) ) {
							((AdditiveOperandContext)_localctx).operatorToken = _errHandler.RecoverInline(this);
						} else {
							if (_input.La(1) == TokenConstants.Eof) {
								matchedEOF = true;
							}

							_errHandler.ReportMatch(this);
							Consume();
						}
						State = 24; operand(7);
						}
						break;

					case 2:
						{
						_localctx = new MultiplicativeOperandContext(new OperandContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_operand);
						State = 25;
						if (!(Precpred(_ctx, 5))) throw new FailedPredicateException(this, "Precpred(_ctx, 5)");
						State = 26;
						((MultiplicativeOperandContext)_localctx).operatorToken = _input.Lt(1);
						_la = _input.La(1);
						if ( !(_la==OP_MULTIPLY || _la==OP_DIVIDE) ) {
							((MultiplicativeOperandContext)_localctx).operatorToken = _errHandler.RecoverInline(this);
						} else {
							if (_input.La(1) == TokenConstants.Eof) {
								matchedEOF = true;
							}

							_errHandler.ReportMatch(this);
							Consume();
						}
						State = 27; operand(6);
						}
						break;

					case 3:
						{
						_localctx = new ExponentialOperandContext(new OperandContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_operand);
						State = 28;
						if (!(Precpred(_ctx, 4))) throw new FailedPredicateException(this, "Precpred(_ctx, 4)");
						State = 29; Match(OP_EXPONENT);
						State = 30; operand(5);
						}
						break;

					case 4:
						{
						_localctx = new IncrementOperandContext(new OperandContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_operand);
						State = 31;
						if (!(Precpred(_ctx, 3))) throw new FailedPredicateException(this, "Precpred(_ctx, 3)");
						State = 32;
						((IncrementOperandContext)_localctx).operatorToken = _input.Lt(1);
						_la = _input.La(1);
						if ( !(_la==OP_INC || _la==OP_DEC) ) {
							((IncrementOperandContext)_localctx).operatorToken = _errHandler.RecoverInline(this);
						} else {
							if (_input.La(1) == TokenConstants.Eof) {
								matchedEOF = true;
							}

							_errHandler.ReportMatch(this);
							Consume();
						}
						}
						break;
					}
					} 
				}
				State = 37;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public override bool Sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 2: return operand_sempred((OperandContext)_localctx, predIndex);
		}
		return true;
	}
	private bool operand_sempred(OperandContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return Precpred(_ctx, 6);

		case 1: return Precpred(_ctx, 5);

		case 2: return Precpred(_ctx, 4);

		case 3: return Precpred(_ctx, 3);
		}
		return true;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
} // namespace Calculator
